feat(changes): change color scheme, add ability to view ideas, to delete ideas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="description">Описание</string>
     <string name="legal_type">Тип юридического лица</string>
     <string name="load_questions">Загрузить вопросы</string>
+    <string name="details">Подробнее</string>
+    <string name="idea_details">Детали идеи</string>
+    <string name="delete_idea">Удалить идею</string>
+    <string name="delete_idea_confirmation">Вы уверены, что хотите удалить эту идею?</string>
 </resources>
 
