feat(support): add extra page with support measures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="idea_details">Детали идеи</string>
     <string name="delete_idea">Удалить идею</string>
     <string name="delete_idea_confirmation">Вы уверены, что хотите удалить эту идею?</string>
+    <string name="support_measures">Меры поддержки</string>
 </resources>
 
